--- a/.env
+++ b/.env
@@ -27,5 +27,5 @@ APP_SECRET=35f6735f356cc1b1024804e2bea622f5
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
-DATABASE_URL="mysql://root:sasa@127.0.0.1:3307/symfony6mysql_X"
+DATABASE_URL="mysql://root:sasa@127.0.0.1:3307/symfony6mysql_13"
 ###< doctrine/doctrine-bundle ###
